--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>React.js using NPM, Babel6 and Webpack</title>
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	</head>
 	<body>
 			<div class="container" id="app" />
